--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,92 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
+
+.App{
+    width: 40%;
+    margin:2em auto;
+    background-color: #394049;
+    border-radius: 5px;
+    color: #FFFF;
+    font-family: 'Poppins', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header{
+    padding: 0.5em;
+    border-bottom: 1px solid #2C3035;
+    text-align: center;   
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header h1{
+    margin: 0;
+    padding: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.form-todo{
+    padding: 5em;
+    margin: 0 2rem;
 }
 
-.App-link {
-  color: #61dafb;
+.form-todo h2, .list-todo h2{
+    text-align: center;
+    margin-top: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form-control{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1em;
+}
+
+.form-control label{
+    font-weight: bold;
+    font-size: .7em;
+    margin-bottom: .5em;
+}
+
+.form-control input{
+    border-radius: 5px;
+    background-color: #2C3035;
+    padding: 1rem;
+    color: #dfdfdf;
+    outline: 0;
+}
+
+.button{
+    border: none;
+    border-radius: 5px;
+    background-color: #c92d2d;
+    height: 2rem;
+    width: 5rem;
+    font-size: 18px;
+    color: #dfdfdf;
+}
+
+.list-todo{
+    padding: 0 1em 2em;
+    margin: 1rem 1.5rem;
+}
+
+.list-todo p{
+    text-align: center;
+}
+
+.todo-done{
+    text-decoration: line-through;
+    color: red;
+}
+
+.todo p{
+    text-align: left;
+    font-style: italic;
+    font-size: .7em;
+}
+
+.todo svg{
+    font-size: 1.2em;
+    cursor: pointer;
+    margin-right: 1em;
+    transition: 0.5s;
+}
+
+.todo svg:hover{
+    color: rgb(240,98,146);
 }
